# self-learning-gpt

./: .env  README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
.streamlit/: secrets.toml
pages/: 01_LEARNED_GPT_TEST.py
