[tool.poetry]
name = "self-learning-gpt"
version = "0.1.0"
description = ""
authors = ["teddy <teddylee777@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
streamlit-feedback = "^0.1.3"

[tool.poetry.group.dev.dependencies]
langchain = "^0.1.13"
streamlit = "^1.32.2"
langchain-openai = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
